--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,13 +1,13 @@
 name: intersperse
 description: Insert an element between each element of an Iterable or List.
-version: 1.0.0+3
+version: 1.1.0-dev.1
 homepage: https://www.github.com/modulovalue/dart_intersperse
 author: Modestas Valauskas <valauskasmodestas+dartpub@gmail.com>
 
 environment:
-  sdk: '>=2.4.4 <3.0.0'
+  sdk: ">=2.6.0-dev.4 <3.0.0"
 
 dev_dependencies:
-  extra_pedantic: ^1.1.1
+  extra_pedantic: ^1.1.1+2
   test: ^1.5.0
   test_coverage: ^0.2.0
