--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: intersperse
 description: Insert an element between each element of an Iterable or List.
-version: 1.1.0-dev.1+1
+version: 1.1.1-dev.1
 homepage: https://www.github.com/modulovalue/dart_intersperse
 author: Modestas Valauskas <valauskasmodestas+dartpub@gmail.com>
 
